--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ nav ul li a:hover {
     display: flex;
     flex-wrap: wrap;
     align-content: center;
+    align-items: center;
     justify-content: center;
     width: 100%;
 }
